--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             margin: 0;
             padding: 0;
             font-family: 'Poppins', sans-serif;
-            background: #fff;
+            background: linear-gradient(135deg, #00eaff, #6e00ff);
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #252525;
+            color: white;
             direction: rtl;
         }
         .ad-container {
