--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             max-width: 40%;
         }
         .ad-container .image-content img {
+            filter: drop-shadow(16px 10px 5px #252525);
             width: 100%;
             height: auto;
         }
