--- a/index.html
+++ b/index.html
@@ -113,9 +113,11 @@
             <p>
                 في هذا الكورس، ستتعلم:
                 <ul>
+                    
                     <li><strong>أساسيات HTML:</strong> كيفية كتابة هيكل الصفحة باستخدام الوسوم (Tags).</li>
                     <li><strong>تنسيق المحتوى:</strong> كيفية تنظيم النصوص، الصور، والروابط.</li>
                     <li><strong>الصفحات التفاعلية:</strong> إضافة نماذج (Forms) وأزرار للمستخدمين.</li>
+                      <li><strong>العناصر المنطقية:</strong> كيفية استخدام العناصر المنطقية  (Semantic Elements) لتحسين هيكل الصفحة وتنظيم المحتوى.</li>
                     <li><strong>نصائح عملية:</strong> كيف تبدأ مشروعك الأول في تطوير الويب.</li>
                 </ul>
             </p>
